--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/necojackarc/extensible-custom-error.git"
+    "url": "https://github.com/necojackarc/extensible-custom-error.git"
   },
   "keywords": [
     "error"
