--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "coveralls": "^3.0.2",
     "eslint": "^5.6.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "typescript": "^3.4.1"
   }
 }
