--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "types/index.d.ts",
   "scripts": {
     "lint": "eslint src test",
-    "test": "nyc mocha test",
+    "test": "nyc --all mocha test",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -24,11 +24,16 @@
   "homepage": "https://github.com/necojackarc/extensible-custom-error#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.4",
-    "eslint": "^6.0.1",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
-    "typescript": "^3.5.2",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.7.0",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
+    "typescript": "^4.0.2",
     "typings-tester": "^0.3.2"
+  },
+  "nyc": {
+    "include": [
+      "src"
+    ]
   }
 }
