--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint src test",
     "test": "nyc --all mocha test",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/necojackarc/extensible-custom-error#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
     "eslint": "^7.7.0",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
