--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "extensible-custom-error",
   "version": "0.0.7",
   "description": "JavaScript extensible custom error that can take a message and/or an Error object",
-  "main": "src/index.js",
+  "main": "./index.cjs",
+  "module": "./index.mjs",
   "types": "types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.cjs",
+      "default": "./index.cjs"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "lint": "eslint src test",
     "test": "nyc --all mocha test",
