--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   },
   "homepage": "https://github.com/necojackarc/extensible-custom-error#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^7.7.0",
-    "mocha": "^8.1.3",
-    "nyc": "^15.1.0",
-    "typescript": "^4.0.2",
-    "typings-tester": "^0.3.2"
+    "chai": "^6.0.1",
+    "eslint": "^9.35.0",
+    "globals": "^16.3.0",
+    "mocha": "^11.7.2",
+    "nyc": "^17.1.0",
+    "tsd": "^0.33.0",
+    "typescript": "^5.9.2"
   },
   "nyc": {
     "include": [
